--- a/TCMBProject/TCMBProject.API/appsettings.json
+++ b/TCMBProject/TCMBProject.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "TCMBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TCMB;Integrated Security=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +8,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
