--- a/TCMBProject/TCMBProject.API/appsettings.json
+++ b/TCMBProject/TCMBProject.API/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "TCMBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TCMB;Integrated Security=True;",
+  "ConnectionStrings": {
+    "TCMBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TCMB;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
