--- a/TCMBProject/TCMBProject.Currency/TCMBProject.Currency.csproj
+++ b/TCMBProject/TCMBProject.Currency/TCMBProject.Currency.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.9" />
+    <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
 
 </Project>
